# fasmio

./: .gitignore
src/: CMakeLists.txt
src/common/: CMakeLists.txt  auto-lock.h  fastcgi.h  ini-reader.cpp  ini-reader.h  list-dir.cpp  list-dir.h  logger.cpp  logger.h  module-logger.cpp  module-logger.h  queue-aux.h  queue.h  ranged-istream.cpp  ranged-istream.h  simple-xsd-aux.h  simple-xsd.h  stream-adaptor.cpp  stream-adaptor.h  string.cpp  string.h  task-processor-aux.h  task-processor.h  task-scheduler-aux.h  task-scheduler.cpp  task-scheduler.h  thread-pool.cpp  thread-pool.h  uuid.cpp  uuid.h
src/config/: fasmio.ini  nginx.fasmio.conf
src/container/: CMakeLists.txt  container-impl.cpp  container-impl.h  data-types.ini  facade.py  key-value-impl.cpp  key-value-impl.h  plugin-impl.cpp  plugin-impl.h  queue-impl.cpp  queue-impl.h  request-impl.cpp  request-impl.h  service-agent-impl.cpp  service-agent-impl.h  stream-impl.cpp  stream-impl.h  task-meta-impl.cpp  task-meta-impl.h  task-meta-sample.xml  tlv-composer.cpp  tlv-composer.h  tlv-parser.cpp  tlv-parser.h  tlv-spec.ini
src/container/slot/: delegated-query-handler.cpp  delegated-query-handler.h  delegated-update-handler.cpp  delegated-update-handler.h  delete-slot-handler.cpp  delete-slot-handler.h  pop-slot-handler.cpp  pop-slot-handler.h  push-slot-handler.cpp  push-slot-handler.h  query-slot-handler.cpp  query-slot-handler.h  slot-handler.cpp  slot-handler.h  update-slot-handler.cpp  update-slot-handler.h
src/interface/: config.h  container.h  logger.h  net-client.h  net-request.h  net-server.h  runtime-env.h  stream.h
src/interface/runtime-env/: abs-time.h  condition.h  event.h  file.h  mutex.h  rwlock.h  semaphore.h  socket.h  thread.h  waitable.h
src/main/: CMakeLists.txt  main.cpp
src/net-client/: CMakeLists.txt  conn-base.cpp  conn-base.h  fcgi-client.cpp  fcgi-client.h  fcgi-conn.cpp  fcgi-conn.h  http-client.cpp  http-client.h  http-conn.cpp  http-conn.h  http-header-parser.cpp  http-header-parser.h
src/net-server/: CMakeLists.txt  base-net-server.cpp  base-net-server.h  fcgi-conn.cpp  fcgi-conn.h  fcgi-server.cpp  fcgi-server.h
src/runtime-env/: CMakeLists.txt  abs-time.cpp  interlocked.cpp  interlocked.h
src/runtime-env/fiber-env/: CMakeLists.txt  cooperative-condition.cpp  cooperative-condition.h  cooperative-event.cpp  cooperative-event.h  cooperative-fd.cpp  cooperative-fd.h  cooperative-file.cpp  cooperative-file.h  cooperative-mutex.cpp  cooperative-mutex.h  cooperative-rwlock.cpp  cooperative-rwlock.h  cooperative-semaphore.cpp  cooperative-semaphore.h  cooperative-socket.cpp  cooperative-socket.h  cooperative-waitable.cpp  cooperative-waitable.h  epoll.cpp  epoll.h  fiber-env.cpp  fiber-env.h  fiber-impl.cpp  fiber-impl.h  log.cpp  log.h  native-condition.cpp  native-condition.h  native-mutex.cpp  native-mutex.h  native-rwlock.cpp  native-rwlock.h  platform-fiber.cpp  platform-fiber.h  platform-thread.cpp  platform-thread.h  queue.h  wait-mgr.cpp  wait-mgr.h
src/runtime-env/pthread-env/: CMakeLists.txt  condition.cpp  condition.h  event.cpp  event.h  file.cpp  file.h  mutex.cpp  mutex.h  platform-thread.cpp  platform-thread.h  pthread-env.cpp  pthread-env.h  rwlock.cpp  rwlock.h  semaphore.cpp  semaphore.h  socket.cpp  socket.h  thread-impl.cpp  thread-impl.h
src/sample/: CMakeLists.txt
src/sample/simple-tcp-server/: CMakeLists.txt  ftp.cpp  ftp.h  qotd.cpp  qotd.h  simple-ftp-server.cpp  simple-qotd-server.cpp  tcp-server.cpp  tcp-server.h
src/sample/simple-wget/: CMakeLists.txt  wget.cpp
src/scripts/: build.sh  install.sh  pack.sh  simple-xsd-compiler.py  task_meta.py
src/service/: CMakeLists.plugin  CMakeLists.txt  version.h
src/service/interface/: key-value.h  plugin.h  queue.h  request.h  service-agent.h  service.h  task-meta.h  task.h
src/service/md5-guesser/: CMakeLists.txt  data-types.ini  md5-guesser.cpp  md5-guesser.h  test.py
src/service/plugin-test-loader/: CMakeLists.txt  plugin-test-loader.cpp
src/service/registry/: CMakeLists.txt  data-types.ini  registry.cpp  registry.h  show-nodes.py
src/service/sdk/: CMakeLists.txt  general-xsd-task.h  plugin.cpp  plugin.h  service-base-aux.h  service-base.cpp  service-base.h  service-factory-impl.cpp  service-factory-impl.h  service-factory.h  service-registor.h  task-base.cpp  task-base.h
src/test/: CMakeLists.txt  main.cpp
src/test/common/: ini-reader-test.cpp  ranged-istream-test.cpp  simple-xsd-test.cpp  stream-adaptor-test.cpp
src/test/container/: key-value-impl-test.cpp  request-impl-test.cpp  task-meta-impl-test.cpp  tlv-composer-test.cpp  tlv-parser-test.cpp
src/test/fiber-env/: cooperative-condition-test.cpp  cooperative-event-test.cpp  cooperative-file-test.cpp  cooperative-mutex-test.cpp  cooperative-rwlock-test.cpp  cooperative-semaphore-test.cpp  fiber-env-test.cpp
